kubernetes/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
  labels:
    name: petclinic
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitor
  labels:
    name: monitor
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
